test/success/simple_drop/main.sk
module Main {

class Foo {
}

instance Drop[Foo] {
    fn drop(self) {
        println("Dropping Foo");
    }
}

fn main() {
    let f = Foo();
}

}