test/errors/traits/trait_not_found/main.sk
module Main {

class Foo {
}

instance Foo[Int] {
}

fn main() {
}

}